--- a/app/src/main/res/layout/fragment_bot_nav__discounts_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__discounts_fragment__vendor.xml
@@ -61,6 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/disc_vendor_gv"
+        android:layout_marginTop="10dp"
         android:divider="@android:color/transparent"
 
         android:layout_marginBottom="70dp"
