--- a/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
@@ -54,11 +54,23 @@
                     android:background="@drawable/home_toolbar_notification" />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
+
     </android.support.design.widget.AppBarLayout>
+    <ListView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/events_vendor_listview"
+    android:divider="@android:color/transparent"
+    android:layout_below="@+id/appbar_homescreen"
+    android:padding="3dp"
+    android:layout_margin="6dp"
+    />
+
     <ImageView
         android:id="@+id/IV_noitem_disc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:layout_centerInParent="true"
         android:layout_below="@+id/appbar_homescreen"
 
