--- a/app/src/main/res/layout/fragment_discount_card.xml
+++ b/app/src/main/res/layout/fragment_discount_card.xml
@@ -6,91 +6,108 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <RelativeLayout
+        android:id="@+id/dfs"
 
 
-            <RelativeLayout
-                android:id="@+id/relative_discountone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="7dp"
+            app:cardElevation="2dp"
+            android:layout_margin="5dp"
+            app:cardPreventCornerOverlap="false"
+            android:layout_gravity="center"
+            android:layout_height="170dp" >
+        <RelativeLayout
+            android:id="@+id/relative_discountone"
+
+
+            android:layout_width="wrap_content"
+            android:layout_height="170dp">
+            <ImageView
+                android:id="@+id/roundimg_one"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+
+
+                android:background="@drawable/rounded_two"
+
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
+
+            <ImageView
+                android:id="@+id/IV_vdisc_image"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:background="@drawable/vgv"
+                android:clickable="false"
+                android:layout_alignParentStart="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/roundedImageView"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignStart="@+id/TV_disc_percentage"
+                android:layout_alignTop="@+id/IV_vdisc_image"
+
+                android:layout_marginTop="19dp"
+
+                android:clickable="false"
+                android:background="@drawable/rounded"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/colorPrimary"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:src="@drawable/rounded"
+                />
+
+
+            <TextView
+                android:id="@+id/TV_disc_percentage"
                 android:layout_width="wrap_content"
-                android:layout_height="170dp">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/roundedImageView"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:maxLength="20"
+                android:text="75% Discount in KFC"
+                android:textColor="@color/colorWhite"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
+            <TextView
+                android:id="@+id/textViewu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/TV_disc_percentage"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="2dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Percide January 7 2018 Dont miss it"
+                android:textColor="@color/colorWhite"
+                android:textSize="11sp"
+                android:maxLength="27"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
 
-                <ImageView
-                    android:id="@+id/roundimg_one"
-                    android:layout_width="400dp"
-                    android:layout_height="match_parent"
 
 
-
-
-                    android:paddingBottom="6dp"
-                    android:paddingTop="6dp"
-                    android:src="@drawable/rounded_two"
-
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                   />
-
-                <ImageView
-                    android:id="@+id/IV_vdisc_image"
-                    android:layout_width="250dp"
-                    android:layout_height="158dp"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/vgv"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    />
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/roundedImageView"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@drawable/rounded"
-                    app:civ_border_width="2dp"
-                    app:civ_border_color="@color/colorPrimary"
-
-                    android:layout_alignStart="@+id/TV_disc_percentage"
-                    android:layout_alignTop="@+id/IV_vdisc_image"
-                    android:layout_marginStart="11dp"
-                    android:layout_marginTop="11dp"
-                    android:src="@drawable/rounded"
-
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                   />
-
-                <TextView
-                    android:id="@+id/TV_disc_percentage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/roundedImageView"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="17dp"
-
-                    android:text="75% Discount in KFC"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    />
-
-                <TextView
-                    android:id="@+id/textViewu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/TV_disc_percentage"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="2dp"
-
-                    android:text="Percide January 7 2018 Dont miss it"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="11sp"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"/>
 
                 <RatingBar
                     android:id="@+id/RB_vendr_rating"
@@ -129,7 +146,7 @@
                         android:id="@+id/button"
                         android:layout_width="60dp"
                         android:layout_height="25dp"
-                        android:layout_above="@+id/TV_disc_percentage"
+                        android:layout_above="@+id/textViewu"
                         android:layout_marginBottom="29dp"
                         android:layout_marginStart="29dp"
                         android:layout_toEndOf="@+id/IV_disc_image"
@@ -155,8 +172,10 @@
                         android:focusableInTouchMode="false"
                         android:src="@drawable/ic_location_on_black_24dp" />
 
-                </LinearLayout>
 
-            </RelativeLayout>
+                </LinearLayout>
+        </RelativeLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
 </RelativeLayout>
