--- a/app/src/main/res/drawable/edittext_selected.xml
+++ b/app/src/main/res/drawable/edittext_selected.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item><shape>
-        <stroke android:width="2dp" android:color="@color/colorAccent" />
-
+    <item> <shape>
+        <stroke android:width="1.5dp" android:color="@color/colorPrimary" />
         <solid android:color="@android:color/transparent" />
-
-
-        <corners
-            android:bottomRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"/>
+        <corners android:radius="5dp" />
     </shape></item>
 
 </selector>
