--- a/app/src/main/res/drawable/edittext_unselected.xml
+++ b/app/src/main/res/drawable/edittext_unselected.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item><shape>
-        <stroke android:width="1dp" android:color="@color/colorHint" />
-
-        <solid android:color="@android:color/transparent" />
-
-        <corners
-            android:bottomRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"/>
-    </shape></item>
-
+    <item>
+        <shape>
+            <stroke android:width="1.5dp" android:color="@color/colorHintss" />
+            <solid android:color="@android:color/transparent" />
+            <corners android:radius="5dp" />
+        </shape>
+    </item>
 </selector>
