--- a/app/src/main/res/layout/activity_add_discount__vendor.xml
+++ b/app/src/main/res/layout/activity_add_discount__vendor.xml
@@ -33,7 +33,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add Discount"
-
+                    android:textColor="@color/colorHintss"
+                    android:textSize="20sp"
                     android:layout_centerInParent="true"/>
 
             </RelativeLayout>
