--- a/app/src/main/res/layout/activity_add_events__vendor.xml
+++ b/app/src/main/res/layout/activity_add_events__vendor.xml
@@ -31,19 +31,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add Event"
+                    android:textSize="20sp"
                     android:textColor="@color/colorHintss"
                     android:layout_centerInParent="true"/>
-                <ImageView
-                    android:id="@+id/homescreen_notification"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_centerVertical="true"
 
-                    android:background="@drawable/home_toolbar_notification"
-
-                    />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -148,11 +139,16 @@
                 android:layout_weight="1.4"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="100dp">
                 <EditText
                     android:textSize="16sp"
                     android:hint="Description"
                     android:textColor="#000"
+                    android:maxLength="21"
+                    android:lines="3"
+                    android:gravity="start"
+                    android:padding="5dp"
+                    android:maxLines="3"
                     android:id="@+id/et_addevent_desc"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
