--- a/app/src/main/res/layout/activity_home_screen_vendor.xml
+++ b/app/src/main/res/layout/activity_home_screen_vendor.xml
@@ -11,6 +11,8 @@
         android:id="@+id/bottomBar_vendor"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        app:bb_inActiveTabColor="#222222"
+        app:bb_activeTabColor="@color/colorPrimary"
         android:layout_alignParentBottom="true"
         app:bb_titleTextAppearance="@style/TextAppearance.BotFont"
         app:bb_tabXmlResource="@xml/bottombar_tabs_vendor"
