--- a/app/src/main/res/layout/activity_job__edit__vendor.xml
+++ b/app/src/main/res/layout/activity_job__edit__vendor.xml
@@ -108,11 +108,15 @@
                 android:layout_weight="1.4"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="100dp">
                 <EditText
                     android:textSize="16sp"
                     android:hint="Description"
-
+                    android:maxLength="21"
+                    android:lines="3"
+                    android:gravity="start"
+                    android:padding="5dp"
+                    android:maxLines="3"
                     android:id="@+id/et_veditjobs_description"
                     android:textColor="#000"
                     android:layout_width="match_parent"
