--- a/app/src/main/res/layout/activity_job_details__vendor.xml
+++ b/app/src/main/res/layout/activity_job_details__vendor.xml
@@ -154,6 +154,7 @@
 
     </LinearLayout>
     <Button
+        android:id="@+id/job_vendor_edit"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_gravity="center|bottom"
