--- a/app/src/main/res/layout/activity_settings__account.xml
+++ b/app/src/main/res/layout/activity_settings__account.xml
@@ -29,7 +29,7 @@
                     android:textSize="23sp"/>
                 <ImageView
                     android:id="@+id/set_account_back"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
