--- a/app/src/main/res/layout/content_add_discount__vendor.xml
+++ b/app/src/main/res/layout/content_add_discount__vendor.xml
@@ -105,11 +105,16 @@
                 android:layout_weight="1.4"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="100dp">
                 <EditText
                     android:textSize="16sp"
                     android:hint="Description"
                     android:textColor="#000"
+                    android:maxLength="21"
+                    android:lines="3"
+                    android:gravity="start"
+                    android:padding="5dp"
+                    android:maxLines="3"
                     android:id="@+id/et_vcomplete_discdesc_s"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
