--- a/app/src/main/res/layout/content_profile_basicinfo.xml
+++ b/app/src/main/res/layout/content_profile_basicinfo.xml
@@ -180,11 +180,12 @@
                 android:id="@+id/et_address"
                 android:textSize="16sp"
                 android:hint="Address"
-                android:maxLines="3"
                 android:gravity="start"
                 android:padding="10dp"
                 android:textColor="#000"
                 android:maxLength="21"
+                android:lines="3"
+                android:maxLines="3"
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
