--- a/app/src/main/res/layout/content_vendor_completeinfo.xml
+++ b/app/src/main/res/layout/content_vendor_completeinfo.xml
@@ -94,11 +94,16 @@ android:id="@+id/TIV_vcomplete_percentage"
                 android:layout_weight="1.4"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="100dp">
                 <EditText
                     android:textSize="16sp"
                     android:hint="Description"
                     android:textColor="#000"
+                    android:maxLength="21"
+                    android:lines="3"
+                    android:gravity="start"
+                    android:padding="5dp"
+                    android:maxLines="3"
                     android:id="@+id/et_vcomplete_discdesc"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
