--- a/app/src/main/res/layout/fragment_discountcard_vendor.xml
+++ b/app/src/main/res/layout/fragment_discountcard_vendor.xml
@@ -9,23 +9,33 @@
 
 
     <RelativeLayout
-        android:id="@+id/relative_discountone"
+        android:id="@+id/dfs"
 
 
         android:layout_width="wrap_content"
-        android:layout_height="170dp">
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="7dp"
+            app:cardElevation="2dp"
+          android:layout_margin="5dp"
+            app:cardPreventCornerOverlap="false"
+            android:layout_gravity="center"
+            android:layout_height="170dp" >
+            <RelativeLayout
+                android:id="@+id/relative_discountone"
 
-        <com.makeramen.roundedimageview.RoundedImageView
+
+                android:layout_width="wrap_content"
+                android:layout_height="170dp">
+        <ImageView
             android:id="@+id/roundimg_one"
-            android:layout_width="500dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
 
 
 
-
-            android:paddingBottom="6dp"
-            android:paddingTop="6dp"
-            android:src="@drawable/rounded_two"
+            android:background="@drawable/rounded_two"
 
             android:clickable="false"
             android:focusable="false"
@@ -35,10 +45,11 @@
         <ImageView
             android:id="@+id/IV_vdisc_image_vendor"
             android:layout_width="250dp"
-            android:layout_height="158dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:src="@drawable/vgv"
+            android:background="@drawable/vgv"
             android:clickable="false"
+            android:layout_alignParentStart="true"
             android:focusable="false"
             android:focusableInTouchMode="false"
             />
@@ -126,7 +137,7 @@ android:maxLength="27"
             android:focusableInTouchMode="false"
 
             android:layout_marginTop="80dp"
-            android:layout_marginRight="30dp"
+            android:layout_marginEnd="30dp"
             android:layout_alignParentEnd="true"
             android:orientation="vertical">
 
@@ -135,8 +146,6 @@ android:maxLength="27"
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/button"
-                android:layout_below="@+id/TV_disc_percentage"
 
                 android:layout_marginTop="25dp"
                 android:clickable="false"
@@ -145,7 +154,8 @@ android:maxLength="27"
                 android:src="@drawable/ic_location_on_black_24dp" />
 
         </LinearLayout>
-
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
     </RelativeLayout>
 
 </RelativeLayout>
