--- a/app/src/main/res/xml/bottombar_tabs_vendor.xml
+++ b/app/src/main/res/xml/bottombar_tabs_vendor.xml
@@ -1,19 +1,22 @@
+
 <tabs>
-    <tab
-        id="@+id/botnav_event_vendor"
-        icon="@drawable/botnav_event"
-        title="Events"/>
-    <tab
-        id="@+id/botnav_discount_vendor"
-        icon="@drawable/botnav_discount"
-        title="Discounts" />
-    <tab
-        id="@+id/botnav_jobs_vendor"
-        icon="@drawable/botnav_jobs"
-        title="Jobs" />
-    <tab
-        id="@+id/botnav_settings_vendor"
-        icon="@drawable/botnav_setting"
-        title="Settings"
-        barColor="#000"/>
+<tab
+    id="@+id/botnav_event_vendor"
+    icon="@drawable/my_tab_eventicon"
+    title="Home"/>
+<tab
+    id="@+id/botnav_discount_vendor"
+    icon="@drawable/my_tab_discounticon"
+
+    title="Discount" />
+<tab
+    id="@+id/botnav_jobs_vendor"
+    icon="@drawable/my_tab_jobicon"
+
+    title="Job" />
+<tab
+    id="@+id/botnav_settings_vendor"
+    icon="@drawable/mytab_settingicon"
+    title="Settings"
+/>
 </tabs>
