--- a/app/src/main/res/layout/fragment_bot_nav__discounts_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__discounts_fragment__vendor.xml
@@ -62,6 +62,8 @@
         android:layout_height="match_parent"
         android:id="@+id/disc_vendor_gv"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginLeft="6dp"
         android:divider="@android:color/transparent"
 
         android:layout_marginBottom="70dp"
