--- a/app/src/main/res/layout/fragment_bot_nav__events.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events.xml
@@ -59,11 +59,11 @@
     </android.support.design.widget.AppBarLayout>
     <ImageView
         android:id="@+id/IV_noitem_disc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
 
-        android:background="@drawable/event_noitems_image"
+        android:src="@drawable/event_noitems_images"
         />
 
 </RelativeLayout>
