--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -116,6 +116,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/title_jobdesc_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -123,7 +124,6 @@
             android:gravity="start"
             android:layout_marginTop="5dp"
             android:text=" Leeds,York,Harrogate,Bradford"
-            android:drawableLeft="@drawable/ic_blacklocation"
             android:textColor="@color/colorHintss"
             android:textSize="13sp" />
 
