--- a/app/src/main/res/layout/activity_job_details__vendor.xml
+++ b/app/src/main/res/layout/activity_job_details__vendor.xml
@@ -113,13 +113,13 @@
 
 
                 <TextView
+                    android:id="@+id/text_name_job"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:gravity="start"
                     android:layout_marginTop="5dp"
                     android:text="Leeds,York,Harrogate,Bradford"
-                    android:drawableLeft="@drawable/ic_blacklocation"
                     android:textColor="@color/colorHintss"
                     android:textSize="13sp" />
                 <TextView
