--- a/app/src/main/res/layout/content_add_discount__vendor.xml
+++ b/app/src/main/res/layout/content_add_discount__vendor.xml
@@ -99,30 +99,30 @@
                     android:paddingBottom="2dp" />
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
+
                 android:textColorHint="@color/colorBlack"
                 android:theme="@style/TextLabel"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1.4"
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="100dp">
                 <EditText
+                    android:id="@+id/et_vcomplete_discdesc_s"
                     android:textSize="16sp"
                     android:hint="Description"
-                    android:textColor="#000"
-                    android:maxLength="21"
-                    android:lines="3"
                     android:gravity="start"
-                    android:padding="5dp"
+                    android:padding="10dp"
+                    android:textColor="#000"
+                    android:lines="3"
                     android:maxLines="3"
-                    android:id="@+id/et_vcomplete_discdesc_s"
+
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
+                    android:inputType="text|textMultiLine|textCapSentences"
                     android:background="@drawable/selector_bg_edit"
                     android:textCursorDrawable="@drawable/bg_input_cursor"
                     android:paddingBottom="2dp" />
             </android.support.design.widget.TextInputLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
