--- a/app/src/main/res/layout/content_discount_details__vendor.xml
+++ b/app/src/main/res/layout/content_discount_details__vendor.xml
@@ -99,29 +99,32 @@
 
                     />
             </RelativeLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="bottom"
-                android:orientation="horizontal">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:text="Apply"
-                    android:layout_weight="1"
-                    android:layout_margin="10dp"
-                    android:textColor="@color/colorWhite"
-                    android:background="@drawable/but_selected"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:text="Follow"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/colorWhite"
-                    android:background="@drawable/but_unselected"/>
-            </LinearLayout>
+
+
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/but_selected"
+            android:text="Apply"
+            android:textColor="@color/colorWhite" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/but_unselected"
+            android:text="Follow"
+            android:textColor="@color/colorWhite" />
+    </LinearLayout>
     </RelativeLayout>
