--- a/app/src/main/res/layout/fragment_discountcard_vendor.xml
+++ b/app/src/main/res/layout/fragment_discountcard_vendor.xml
@@ -146,6 +146,7 @@ android:maxLength="27"
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="invisible"
 
                 android:layout_marginTop="25dp"
                 android:clickable="false"
