--- a/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
@@ -30,6 +30,7 @@
                     android:layout_marginEnd="65dp"
                     android:layout_toStartOf="@+id/homescreen_adddiscount"
                     android:text="Events"
+                    android:visibility="invisible"
                     android:textColor="@color/colorHint"
                     android:textSize="22sp" />
 
@@ -73,7 +74,7 @@
         android:layout_centerInParent="true"
         android:layout_below="@+id/appbar_homescreen"
 
-        android:src="@drawable/event_noitems_images"
+        android:background="@drawable/event_noitems_images"
         />
 
 </RelativeLayout>
