--- a/app/src/main/res/layout/fragment_bot_nav__settings_fragment.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__settings_fragment.xml
@@ -263,6 +263,7 @@
                     android:paddingLeft="2dp"
                     android:src="@drawable/user_setting_tellafriend"/>
                 <TextView
+                    android:id="@+id/share_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="start|center"
@@ -272,12 +273,29 @@
                     android:textSize="17sp"
                     android:layout_gravity="center"/>
                 <ImageView
+                    android:id="@+id/share_IV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:layout_gravity="end"
                     android:layout_weight=".1"
                     android:src="@drawable/ic_navigate_next_black_24dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:weightSum="2"
+                android:orientation="horizontal">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_weight="1.65"
+                    android:background="@color/colorWhite"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_weight=".5"
+                    android:background="@color/colorHints"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
